--- a/Devops/Jenkinsfile
+++ b/Devops/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     triggers {
-        pollSCM('H/5 * * * *') // Poll every 5 minutes
+        pollSCM('H/5 * * * *')
     }
     stages {
         stage('Checkout SCM') {
@@ -12,11 +12,28 @@ pipeline {
         }
         stage('Verify Frontend Files') {
             steps {
-                dir('Devops') { // navigate to the folder containing HTML/CSS/JS
+                dir('Devops') {
                     echo 'Listing frontend project files...'
-                    bat 'dir' // Windows command
+                    bat 'dir'
                     echo '✅ Frontend code checkout successful!'
                 }
+            }
+        }
+        stage('Copy Frontend Files for Preview') {
+            steps {
+                echo 'Copying frontend files to local preview folder...'
+                bat '''
+                if not exist C:\\JenkinsPreview\\HyderabadExplorer mkdir C:\\JenkinsPreview\\HyderabadExplorer
+                xcopy /E /Y Devops\\* C:\\JenkinsPreview\\HyderabadExplorer\\
+                '''
+                echo '✅ Files copied! You can now open C:\\JenkinsPreview\\HyderabadExplorer in your browser.'
+            }
+        }
+        stage('Open Frontend in Browser') {
+            steps {
+                echo 'Launching frontend in default browser...'
+                bat 'start C:\\JenkinsPreview\\HyderabadExplorer\\index.html'
+                echo '✅ Browser should now open automatically!'
             }
         }
     }
